--- a/css/style.css
+++ b/css/style.css
@@ -18,9 +18,15 @@ nav {
 h1 {
     justify-content: center;
     position: relative;
-    top: 52rem;
-    font-size: 3rem;
+    top: 44rem;
+    font-size: 4rem;
+    text-align: center;
     color: #ffff00;
+    width: 34%;
+    margin: 0 auto;
+    height: 8rem;
+    font-weight: 900;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 header > section:last-child,
