--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,16 @@ nav {
     background-color: #ff0000;
     display: flex;
     justify-content: flex-end;
+    padding-left: 1rem;
+}
+
+button {
+    font-size: 1rem;
+    padding: .5rem 1rem;
+    width: 2rem;
+    border: 0;
+    border-radius: 2rem;
+    margin-right: .5rem;
 }
 
 h1 {
