--- a/css/style.css
+++ b/css/style.css
@@ -18,11 +18,12 @@ nav {
 
 button {
     font-size: 1rem;
-    padding: .5rem 1rem;
+    padding: .5rem 0rem;
     width: 2rem;
     border: 0;
     border-radius: 2rem;
     margin-right: .5rem;
+    margin-top: .5rem;
 }
 
 h1 {
